Fix: Wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,54 @@ body{
   color: white;
 }
 
+#home_picture img {
+  width: 1400px;
+  height: 700px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+}
+
+#content{
+  text-indent: 50px;
+  text-align: left;
+  padding-left: 140px;
+  font-family: unset;
+}
+
+#content h2{
+  text-align: center;
+  margin: 5px;
+}
+
+#content p{
+  padding-left: 30px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+}
+
+.wrap{
+  width: 465px;
+  height: 400px;
+  border: 1px solid black;
+  word-wrap: break-word;
+  float:left;
+}
+
+.wrap h4 {
+  padding: 20px;
+  float: right;
+}
+
+.wrap h4:hover {
+  color: blue;
+  background: #cccccc;
+}
+
+#footer{
+  float: right;
+}
 /* Project Page */
 .projects_top h1{
   margin:3%;
@@ -180,7 +228,6 @@ body{
   overflow:auto;
   width: 90%
 }
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
